kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: poc-kubernetes

spec:
  replicas: 2

  selector:
    matchLabels:
      app: poc-kubernetes

  template:
    metadata:
      labels:
        app: poc-kubernetes

    spec:
      containers:
        - name: poc-kubernetes

          image: localhost:5000/poc-kubernetes:2.1
          imagePullPolicy: Always

          ports:
            - containerPort: 8080
