kubernetes/app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: poc-service

spec:
  selector:
    app: poc-kubernetes

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
