kubernetes/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poc-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: poc.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poc-service
                port:
                  number: 8080
